force-app/main/default/objects/Voluntary_Office__c/Voluntary_Office__c.object-meta.xml
<CustomObject>
    <description>Junction object connecting Members (Contacts) with Associations.</description>
    <label>Voluntary Office</label>
    <nameField>
        <displayFormat>VO-{000000}</displayFormat>
        <label>Voluntary Office ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Voluntary Offices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>