force-app/main/default/objects/Voluntary_Office__c/fields/Association__c.field-meta.xml
<CustomField>
    <fullName>Association__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Association</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Association__c.Association_Name__c</field>
            <operation>equals</operation>
            <valueField>Association__c.Association_Name__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Association__c</referenceTo>
    <relationshipLabel>Voluntary Offices</relationshipLabel>
    <relationshipName>Association_Member</relationshipName>
    <type>Lookup</type>
</CustomField>