force-app/main/default/objects/Voluntary_Office__c/fields/Association_Type__c.field-meta.xml
<CustomField>
    <fullName>Association_Type__c</fullName>
    <formula>Association__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Association Type</label>
    <type>Text</type>
</CustomField>