force-app/main/default/objects/Voluntary_Office__c/fields/DBS_Complete__c.field-meta.xml
<CustomField>
    <fullName>DBS_Complete__c</fullName>
    <label>DBS Complete</label>
    <type>Date</type>
</CustomField>