force-app/main/default/objects/Voluntary_Office__c/fields/DBS_Expiry__c.field-meta.xml
<CustomField>
    <fullName>DBS_Expiry__c</fullName>
    <label>DBS Expiry</label>
    <type>Date</type>
</CustomField>