force-app/main/default/objects/Voluntary_Office__c/fields/End_date__c.field-meta.xml
<CustomField>
    <fullName>End_date__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>