force-app/main/default/objects/Voluntary_Office__c/fields/Member__c.field-meta.xml
<CustomField>
    <fullName>Member__c</fullName>
    <label>Member</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>notEqual</operation>
            <value>Child</value>
        </filterItems>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>notEqual</operation>
            <value>Associate</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Member_Association</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>