force-app/main/default/objects/Voluntary_Office__c/fields/Membership_Number__c.field-meta.xml
<CustomField>
    <fullName>Membership_Number__c</fullName>
    <formula>Member__r.Hybrid_Membership_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Membership Number</label>
    <type>Text</type>
</CustomField>