force-app/main/default/objects/Voluntary_Office__c/fields/Office_Email__c.field-meta.xml
<CustomField>
    <fullName>Office_Email__c</fullName>
    <inlineHelpText>Used if Office has a generic email address, different from Officer&apos;s personal email</inlineHelpText>
    <label>Office Email</label>
    <type>Email</type>
</CustomField>