force-app/main/default/objects/Voluntary_Office__c/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Section</label>
    <referenceTo>Club_Product__c</referenceTo>
    <relationshipLabel>Voluntary Offices</relationshipLabel>
    <relationshipName>Voluntary_Offices</relationshipName>
    <type>Lookup</type>
</CustomField>