force-app/main/default/objects/Voluntary_Office__c/fields/Section_Area_Parent_Code__c.field-meta.xml
<CustomField>
    <fullName>Section_Area_Parent_Code__c</fullName>
    <formula>Section__r.Section_Area_Parent_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Section Area Parent Code</label>
    <type>Text</type>
</CustomField>