force-app/main/default/objects/Voluntary_Office__c/fields/Section_Area_Parent_Name__c.field-meta.xml
<CustomField>
    <fullName>Section_Area_Parent_Name__c</fullName>
    <formula>Section__r.Section_Area_Parent_Name__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Section Area Parent Name</label>
    <type>Text</type>
</CustomField>