force-app/main/default/objects/Voluntary_Office__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <formula>Member__r.Street__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Street</label>
    <type>Text</type>
</CustomField>