force-app/main/default/objects/Voluntary_Office__c/fields/Tenure_in_Office__c.field-meta.xml
<CustomField>
    <fullName>Tenure_in_Office__c</fullName>
    <formula>IF(ISBLANK(End_date__c), 
IF (MONTH(TODAY()) &gt; MONTH(Start_Date__c), 
(YEAR(TODAY()) - YEAR(Start_Date__c) + 1), 
IF (MONTH(TODAY()) = MONTH(Start_Date__c), 
IF (DAY(TODAY()) &gt;= DAY(Start_Date__c), 
(YEAR(TODAY()) - YEAR(Start_Date__c) + 1), 
YEAR(TODAY()) - YEAR(Start_Date__c) 
), 
YEAR(TODAY()) - YEAR(Start_Date__c) 
) 
), 
IF (MONTH(End_date__c) &gt; MONTH(Start_Date__c), 
(YEAR(End_date__c) - YEAR(Start_Date__c) + 1), 
IF (MONTH(End_date__c) = MONTH(Start_Date__c), 
IF (DAY(End_date__c) &gt;= DAY(Start_Date__c), 
(YEAR(End_date__c) - YEAR(Start_Date__c) + 1), 
YEAR(End_date__c) - YEAR(Start_Date__c) 
), 
YEAR(End_date__c) - YEAR(Start_Date__c) 
) 
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tenure in Office</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>