force-app/main/default/objects/Voluntary_Office__c/fields/Town_City__c.field-meta.xml
<CustomField>
    <fullName>Town_City__c</fullName>
    <formula>Member__r.Town_City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Town/City</label>
    <type>Text</type>
</CustomField>