force-app/main/default/objects/Voluntary_Office__c/fields/Voluntary_Office_Title__c.field-meta.xml
<CustomField>
    <fullName>Voluntary_Office_Title__c</fullName>
    <label>Voluntary Office Title</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Appointed Councillor</fullName>
            </value>
            <value>
                <fullName>Assistant Camping Club Junior (CCJ) Leader</fullName>
            </value>
            <value>
                <fullName>Assistant Youth Leader</fullName>
            </value>
            <value>
                <fullName>Auditor</fullName>
            </value>
            <value>
                <fullName>Camping Club Junior (CCJ) Leader</fullName>
            </value>
            <value>
                <fullName>Camping Club Youth (CCY) Contact</fullName>
            </value>
            <value>
                <fullName>Chairman</fullName>
            </value>
            <value>
                <fullName>Club President</fullName>
            </value>
            <value>
                <fullName>Countryside Care Officer</fullName>
            </value>
            <value>
                <fullName>DA Contact</fullName>
            </value>
            <value>
                <fullName>Deputy Appointed Councillor to National Council</fullName>
            </value>
            <value>
                <fullName>Honorary (VP)</fullName>
            </value>
            <value>
                <fullName>Honorary Member</fullName>
            </value>
            <value>
                <fullName>HQ Committee Member</fullName>
            </value>
            <value>
                <fullName>Management Committee</fullName>
            </value>
            <value>
                <fullName>National Council</fullName>
            </value>
            <value>
                <fullName>National Parks Sites Officer</fullName>
            </value>
            <value>
                <fullName>National Youth Committee Chairman</fullName>
            </value>
            <value>
                <fullName>Patron</fullName>
            </value>
            <value>
                <fullName>Public Relations Officer (PRO)</fullName>
            </value>
            <value>
                <fullName>Regional Youth Liaison Officer (RYLO)</fullName>
            </value>
            <value>
                <fullName>Secretary</fullName>
            </value>
            <value>
                <fullName>Section Youth Liaison Officer (SYLO)</fullName>
            </value>
            <value>
                <fullName>Sites Co-ordinator</fullName>
            </value>
            <value>
                <fullName>Sites Secretary</fullName>
            </value>
            <value>
                <fullName>Treasurer</fullName>
            </value>
            <value>
                <fullName>Vice Chairman</fullName>
            </value>
            <value>
                <fullName>Club Vice President</fullName>
                <label>Vice President</label>
            </value>
            <value>
                <fullName>Web Co-ordinator</fullName>
            </value>
            <value>
                <fullName>Webmaster</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>