force-app/main/default/objects/Voluntary_Office__c/recordTypes/Association_Office_Holder.recordType-meta.xml
<RecordType>
    <fullName>Association_Office_Holder</fullName>
    <active>true</active>
    <label>Association Office Holder</label>
</RecordType>