force-app/main/default/objects/Voluntary_Office__c/recordTypes/Section_Office_Holder.recordType-meta.xml
<RecordType>
    <fullName>Section_Office_Holder</fullName>
    <active>true</active>
    <label>Section Office Holder</label>
</RecordType>