force-app/main/default/objects/Voluntary_Office__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Voluntary_Office_Title__c</columns>
    <columns>Membership_Number__c</columns>
    <columns>Member__c</columns>
    <columns>Association_Type__c</columns>
    <columns>Association__c</columns>
    <columns>Section__c</columns>
    <columns>Start_Date__c</columns>
    <columns>DBS_Complete__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Phone__c</columns>
    <columns>Mobile_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>End_date__c</field>
        <operation>equals</operation>
    </filters>
    <label>All Voluntary Officers</label>
</ListView>