force-app/main/default/objects/Voluntary_Office__c/listViews/CCJ_CCY.listView-meta.xml
<ListView>
    <fullName>CCJ_CCY</fullName>
    <columns>NAME</columns>
    <columns>Voluntary_Office_Title__c</columns>
    <columns>Member__c</columns>
    <columns>Membership_Number__c</columns>
    <columns>Association_Type__c</columns>
    <columns>Association__c</columns>
    <columns>Section__c</columns>
    <columns>Office_Email__c</columns>
    <columns>Email_Address__c</columns>
    <columns>Phone__c</columns>
    <columns>DBS_Complete__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Voluntary_Office_Title__c</field>
        <operation>equals</operation>
        <value>Camping Club Junior (CCJ) Leader,Camping Club Youth (CCY) Contact</value>
    </filters>
    <filters>
        <field>End_date__c</field>
        <operation>equals</operation>
    </filters>
    <label>CCJ, CCY</label>
</ListView>