force-app/main/default/objects/Voluntary_Office__c/listViews/Honorary_members.listView-meta.xml
<ListView>
    <fullName>Honorary_members</fullName>
    <columns>Member__c</columns>
    <columns>Membership_Number__c</columns>
    <columns>Voluntary_Office_Title__c</columns>
    <columns>Association__c</columns>
    <columns>Association_Type__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Voluntary_Office_Title__c</field>
        <operation>equals</operation>
        <value>Honorary Member</value>
    </filters>
    <label>Honorary members</label>
</ListView>