force-app/main/default/objects/Voluntary_Office__c/listViews/National_Councillors.listView-meta.xml
<ListView>
    <fullName>National_Councillors</fullName>
    <columns>Voluntary_Office_Title__c</columns>
    <columns>Membership_Number__c</columns>
    <columns>Member__c</columns>
    <columns>Association__c</columns>
    <columns>Association_Type__c</columns>
    <columns>Section__c</columns>
    <columns>Office_Email__c</columns>
    <columns>Email_Address__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Voluntary_Office_Title__c</field>
        <operation>equals</operation>
        <value>National Council</value>
    </filters>
    <filters>
        <field>End_date__c</field>
        <operation>equals</operation>
    </filters>
    <label>National Councillors</label>
</ListView>