force-app/main/default/objects/Voluntary_Office__c/listViews/Region_Officers.listView-meta.xml
<ListView>
    <fullName>Region_Officers</fullName>
    <columns>NAME</columns>
    <columns>Voluntary_Office_Title__c</columns>
    <columns>Member__c</columns>
    <columns>Membership_Number__c</columns>
    <columns>Phone__c</columns>
    <columns>Association_Type__c</columns>
    <columns>Association__c</columns>
    <columns>Section__c</columns>
    <columns>Start_Date__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Voluntary_Office__c.Association_Office_Holder</value>
    </filters>
    <filters>
        <field>Association_Type__c</field>
        <operation>equals</operation>
        <value>Region</value>
    </filters>
    <filters>
        <field>End_date__c</field>
        <operation>equals</operation>
    </filters>
    <label>Region Officers</label>
</ListView>