force-app/main/default/objects/Voluntary_Office__c/listViews/SYLO.listView-meta.xml
<ListView>
    <fullName>SYLO</fullName>
    <columns>Voluntary_Office_Title__c</columns>
    <columns>Membership_Number__c</columns>
    <columns>Member__c</columns>
    <columns>Association__c</columns>
    <columns>Section__c</columns>
    <columns>Association_Type__c</columns>
    <columns>Office_Email__c</columns>
    <columns>DBS_Complete__c</columns>
    <columns>Start_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Voluntary_Office_Title__c</field>
        <operation>equals</operation>
        <value>Section Youth Liaison Officer (SYLO),Youth Liaison Officer (YLO)</value>
    </filters>
    <filters>
        <field>End_date__c</field>
        <operation>equals</operation>
    </filters>
    <label>SYLO, YLO</label>
</ListView>