force-app/main/default/objects/Voluntary_Office__c/listViews/Treasurers.listView-meta.xml
<ListView>
    <fullName>Treasurers</fullName>
    <columns>Membership_Number__c</columns>
    <columns>Member__c</columns>
    <columns>Office_Email__c</columns>
    <columns>Voluntary_Office_Title__c</columns>
    <columns>Association__c</columns>
    <columns>Section__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Voluntary_Office_Title__c</field>
        <operation>equals</operation>
        <value>Treasurer</value>
    </filters>
    <filters>
        <field>End_date__c</field>
        <operation>equals</operation>
    </filters>
    <label>Treasurers</label>
</ListView>